	- Blackrock Foundry: The Black Forge: Kromog
	- Blackrock Foundry: Iron Assembly: Admiral Gar'an
	- Blackrock Foundry: Blackhand's Crucible: Blackhand
	- Hellfire Citadel: We Don't Need No Library Card
	- Hellfire Citadel: Pits of Mannoroth
	- Hellfire Citadel: Maw of Souls
	- Hellfire Citadel: Temple of Tyranny
	- Hellfire Citadel: Destructor's Rise
	- Hellfire Citadel: The Black Gate
	



Version 4.9.3  (April 29, 2015)

- German localization updated.



Version 4.9.2  (March 25, 2015)

- TOC Updated for Patch 6.1
- Updated Garrison quests which now require the last boss in the instance to be killed.
- Fixed bug with Level 100 quests always being colored blue, even if not in quest log.
- NOTE: Only the English localization is updated.  German update is still pending.

- Added Quests:
	- Blackrock Foundry: Heart of the Fury
	- Blackrock Foundry: Flamebender's Tome
	- Blackrock Foundry: Reverse Piracy
	- Blackrock Foundry: Might of the Elemental Lords
	- Blackrock Foundry: Blackhand's Secret



Version 4.9.1  (December 14, 2014)

- Changes made for updates to Atlas 1.31.0
- Updated quests for Blackfathom Deeps, Razorfen Downs and Razorfen Kraul (revamped in 6.0.2).
- Removed Mists of Pandaria Legendary Cloak quests that were removed from the game.  May the rest in peace.
- Added all known Warlords of Draenor dungeon quests.  If I missed one, let me know.

- Added Quests:
	- Blackfathom Deeps: The Rise of Aku'mai
	- Razorfen Downs: Blackthorn's Lieutenants
	- Razorfen Downs: The Ritual
	- Auchindoun: Go Fetch
	- Auchindoun: The Soulcutter
	- Auchindoun: Soulcarver Voss
	- Auchindoun: The Cure For Death
	- Auchindoun: Vessel of Virtue
	- Auchindoun: Tackling Teron'gor
	- Auchindoun: A Worthy Challenge: Teron'gor
	- Skyreach: Victory is Within Reach
	- Skyreach: Spires of the Betrayer
	- Skyreach: Sky Dancers
	- Skyreach: Aviana's Request
	- Skyreach: A Plea to the Sky
	- Skyreach: Gloriously Incandescent
	- Skyreach: The Dark Within